// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default renders correctly 1`] = `
<div>
  <div>
    <form>
      <input
        onChange={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        placeholder=""
        type="text"
        value=""
      />
    </form>
  </div>
  <div
    onMouseDown={[Function]}
  />
</div>
`;

exports[`season renders correctly 1`] = `
<div>
  <div>
    <form>
      <input
        onChange={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        placeholder="season"
        type="text"
        value=""
      />
    </form>
  </div>
  <div
    onMouseDown={[Function]}
  />
</div>
`;

exports[`team renders correctly 1`] = `
<div>
  <div>
    <form>
      <input
        onChange={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        placeholder="team"
        type="text"
        value=""
      />
    </form>
  </div>
  <div
    onMouseDown={[Function]}
  />
</div>
`;
